# fdb-cli

./: Cargo.toml  LICENSE  README.md
fdb-cli/: Cargo.toml
fdb-cli/src/: cli.rs  client.rs  config.rs  error.rs  lib.rs  main.rs
src/: cli.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  protobuf.rs
