[package]
name = "fdb-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
tokio = { version = "1.4.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
lazy_static = "1.4.0"
serde = { version = "1.0.125", features = ["derive"] }
os_type = "2.3"
confy = "0.3.1"
foundationdb = "0.5"
trompt = "0.0.4"
bytes = "1"
protofish = "0.4.0"
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.4"